# serializer version: 1
# name: test_workflows_container[3.13-3.11]
  '''
  FROM python:3.13-slim AS builder
  
  COPY --from=ghcr.io/astral-sh/uv /uv /uvx /bin/
  
  WORKDIR /app
  
  # Install dependencies first (cached layer, only invalidated by pyproject.toml changes)
  COPY pyproject.toml README.md .
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-install-project
  
  # Copy source and install project
  COPY pkfire/ ./pkfire/
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-editable
  
  FROM python:3.13-slim
  
  COPY --from=builder /app/.venv /app/.venv
  
  RUN useradd --no-create-home --shell /bin/false app
  USER app
  
  CMD ["/app/.venv/bin/python", "-m", "pkfire"]
  
  '''
# ---
# name: test_workflows_container[3.13-3.13]
  '''
  FROM python:3.13-slim AS builder
  
  COPY --from=ghcr.io/astral-sh/uv /uv /uvx /bin/
  
  WORKDIR /app
  
  # Install dependencies first (cached layer, only invalidated by pyproject.toml changes)
  COPY pyproject.toml README.md .
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-install-project
  
  # Copy source and install project
  COPY pkfire/ ./pkfire/
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-editable
  
  FROM python:3.13-slim
  
  COPY --from=builder /app/.venv /app/.venv
  
  RUN useradd --no-create-home --shell /bin/false app
  USER app
  
  CMD ["/app/.venv/bin/python", "-m", "pkfire"]
  
  '''
# ---
# name: test_workflows_container[3.14-3.11]
  '''
  FROM python:3.14-slim AS builder
  
  COPY --from=ghcr.io/astral-sh/uv /uv /uvx /bin/
  
  WORKDIR /app
  
  # Install dependencies first (cached layer, only invalidated by pyproject.toml changes)
  COPY pyproject.toml README.md .
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-install-project
  
  # Copy source and install project
  COPY pkfire/ ./pkfire/
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-editable
  
  FROM python:3.14-slim
  
  COPY --from=builder /app/.venv /app/.venv
  
  RUN useradd --no-create-home --shell /bin/false app
  USER app
  
  CMD ["/app/.venv/bin/python", "-m", "pkfire"]
  
  '''
# ---
# name: test_workflows_container[3.14-3.13]
  '''
  FROM python:3.14-slim AS builder
  
  COPY --from=ghcr.io/astral-sh/uv /uv /uvx /bin/
  
  WORKDIR /app
  
  # Install dependencies first (cached layer, only invalidated by pyproject.toml changes)
  COPY pyproject.toml README.md .
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-install-project
  
  # Copy source and install project
  COPY pkfire/ ./pkfire/
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-editable
  
  FROM python:3.14-slim
  
  COPY --from=builder /app/.venv /app/.venv
  
  RUN useradd --no-create-home --shell /bin/false app
  USER app
  
  CMD ["/app/.venv/bin/python", "-m", "pkfire"]
  
  '''
# ---
# name: test_workflows_container[No maximum-3.11]
  '''
  FROM python:3.14-slim AS builder
  
  COPY --from=ghcr.io/astral-sh/uv /uv /uvx /bin/
  
  WORKDIR /app
  
  # Install dependencies first (cached layer, only invalidated by pyproject.toml changes)
  COPY pyproject.toml README.md .
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-install-project
  
  # Copy source and install project
  COPY pkfire/ ./pkfire/
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-editable
  
  FROM python:3.14-slim
  
  COPY --from=builder /app/.venv /app/.venv
  
  RUN useradd --no-create-home --shell /bin/false app
  USER app
  
  CMD ["/app/.venv/bin/python", "-m", "pkfire"]
  
  '''
# ---
# name: test_workflows_container[No maximum-3.13]
  '''
  FROM python:3.14-slim AS builder
  
  COPY --from=ghcr.io/astral-sh/uv /uv /uvx /bin/
  
  WORKDIR /app
  
  # Install dependencies first (cached layer, only invalidated by pyproject.toml changes)
  COPY pyproject.toml README.md .
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-install-project
  
  # Copy source and install project
  COPY pkfire/ ./pkfire/
  RUN --mount=type=cache,target=/root/.cache/uv \
      uv sync --no-dev --no-editable
  
  FROM python:3.14-slim
  
  COPY --from=builder /app/.venv /app/.venv
  
  RUN useradd --no-create-home --shell /bin/false app
  USER app
  
  CMD ["/app/.venv/bin/python", "-m", "pkfire"]
  
  '''
# ---
